--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "start": "electron .",
+    "start": "npm run build && electron .",
     "build": "vite build",
     "preview": "vite preview"
   },
