--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "start": "npm run build && electron .",
+    "quick": "electron .",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "openai": "^5.0.1",
     "tailwindcss": "^4.1.8"
   }
 }
